create driver at kt

--- a/app/views/app_settings/_form.html.erb
+++ b/app/views/app_settings/_form.html.erb
@@ -4,6 +4,7 @@
     <%= f.input :theme_color %>
     <%= f.input :hidden_sidebar %>
     <%= f.input :boxed_content %>
+    <%= f.input :driver_temp_password %>
     <%= f.input :carrier_name %>
     <%= f.input :carrier_street %>
     <%= f.input :carrier_city %>
