--- a/app/views/driver_profiles/edit.html.erb
+++ b/app/views/driver_profiles/edit.html.erb
@@ -5,11 +5,7 @@
     <h4 class="card-title">Editing Driver Profile</h4>
     <h6 class="card-subtitle"></h6>
 
----------
-              <% @driver_profile.drivers.each do |driver|  %>
-Email:  <%= driver.email.inspect %>
-<% end %>
----------
+
 <%= simple_form_for(@driver_profile) do |f| %>
 <%= f.error_notification %>
 
@@ -22,12 +18,12 @@ Email:  <%= driver.email.inspect %>
           <%= f.input :carrier_name, input_html: { value: @app_setting.try(:carrier_name) }, readonly: true  %>
           <%= f.input :carrier_street, input_html: { value: @app_setting.try(:carrier_street) }, readonly: true  %>
           <%= f.input :carrier_city, input_html: { value: @app_setting.try(:carrier_city) }, readonly: true  %>
-          <label>Carrier State</label><br>
+ 
           <%= f.input :carrier_state, input_html: { value: @app_setting.try(:carrier_state) }, readonly: true  %><br><br>
           <%= f.input :carrier_zip, input_html: { value: @app_setting.try(:carrier_zip) }, readonly: true  %>
           </span> 
 
-
+          <%= f.input :api_id %>
           <%= f.input :email %>
           <%= f.input :first_name %>
           <%= f.input :last_name %>
@@ -35,6 +31,7 @@ Email:  <%= driver.email.inspect %>
           <%= f.input :phone_ext %>
           <%= f.input :emergency_contact_name %>
           <%= f.input :emergency_contact_phone %>
+          <%= f.input :terminal_street %>
           <%= f.input :terminal_id, as: :select, class: "form-group", collection:  @app_setting.terminals, value_method: :id, prompt: 'Select Terminal' 
             %> 
         </div>
@@ -52,9 +49,12 @@ Email:  <%= driver.email.inspect %>
           <%= f.select :role, DriverProfile::DRIVER_ROLE %><br><br><br>
           <label>Violation Alerts Sent Every</label><br>
           <%= f.select :violation_alerts, DriverProfile::VIOLATION_ALERTS %><br><br><br>
+         <label>CYCLE</label><br>
+          <%= f.select :cycle, DriverProfile::CYCLE %><br><br><br>
           <label>Status</label><br>
           <%= f.select :status, DriverProfile::DRIVER_STATUS %> <br><br>
-                    <label>Driver Profile Image</label><br>
+
+          <label>Driver Profile Image</label><br>
           <%= f.input :image, as: :file, label: false %>
           <%= f.input :drivers_license_number %>
           <label>License State | Provence</label><br>
