--- a/app/views/shipments/_form.html.erb
+++ b/app/views/shipments/_form.html.erb
@@ -20,8 +20,11 @@
       <div class="quick-stats__item col-md-3">
         <div class="quick-stats__info">
           <h2>987,459</h2>
-          <small>Select Broker</small>
-          <%= f.input :broker_profile_id, input_html: { class: 'form-control form-control-sm' } %>
+          <small>Select 3PL</small>
+          <%= f.collection_select :three_pl_id, @three_pls.all.order(:name),
+                  :id, :name, include_blank: "3Pl" %> 
+  <%= link_to "New 3PL", new_three_pl_path,
+                  class: "btn btn-info btn-xs round" %>
         </div>
         <div class="quick-stats__chart peity-bar">6,4,8,6,5,6,7,8,3,5,9</div>
       </div>
