rb working dropdowns

--- a/app/views/layouts/partials/_side_navigation.html.erb
+++ b/app/views/layouts/partials/_side_navigation.html.erb
@@ -30,6 +30,12 @@
       </li>
       
       <li class="">
+      <%= link_to new_shipment_path do %> 
+        <i class="zmdi zmdi-boat"></i> New Shipment
+        <% end %>
+      </li>
+
+      <li class="">
       <%= link_to vehicles_path do %> 
         <i class="zmdi zmdi-truck"></i> Vehicles
         <% end %>
