--- a/app/views/regional_offices/_form.html.erb
+++ b/app/views/regional_offices/_form.html.erb
@@ -3,7 +3,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :address_description %>
+    <%= f.input :office_description %> 
     <%= f.input :street %>
     <%= f.input :city %>
     <%= f.input :state %>
